<resources>
    <string name="app_name">MoodTrackerProject</string>

    <string name="welcome_screen_hi">Hi there! I\'m Moody</string>
    <string name="welcome_screen_your_new">Your new personal mood tracker</string>
    <string name="welcome_screen_hi_moody">Hi Moody!</string>

    <string name="login_screen_login_or_signup">Log In or Sign Up</string>
    <string name="login_screen_to_save">To save your data</string>
    <string name="login_screen_login">Login</string>
    <string name="login_screen_pass">Password</string>
    <string name="login_screen_forgot_pass">Forgot password</string>
    <string name="login_screen_get_new">Get new</string>
    <string name="login_screen_have_an_account">Do you have an account?</string>
    <string name="login_screen_create_new">Create new</string>

    <string name="notes_screen_create_new_hint">You have no notes yet, click + to create new one</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes">Notes</string>
    <string name="mood">Mood</string>
    <string name="health">Health</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password">Forgot password? <b>Get new!</b> </string>
    <string name="get_new">Get new</string>
    <string name="do_you_have_an_account">Do you have an account? <b>Create new!</b></string>
    <string name="create_new">Create new</string>
    <string name="create_new_account">Create new account</string>
    <string name="registration_enter_email">Please enter email</string>
    <string name="registration_enter_pass">Please enter password</string>
    <string name="login_failed">Login failed</string>
    <string name="reg_successful">Registration successful</string>
    <string name="reg_failed">Registration failed</string>
    <string name="enter_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_log_in">Already have an account? <b>Log In!</b></string>

    <string name="no_internet_connection_warning">Check the internet connection </string>
    <string name="email_address_collision">Account with this email already exists</string>
    <string name="unknown_error"> Unknown error</string>
    <string name="add_name">Please add name</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="created">Created!</string>
    <string name="you_have_no_notes">You have no notes yet, click + to create new one</string>
    <string name="note_small_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</string>
    <string name="new_note">New note</string>
    <string name="title">Title</string>
    <string name="note_text">Note text</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="my_notes">My Notes</string>
    <string name="delete">Delete</string>
    <string name="home">Home</string>
    <string name="logout">Log Out</string>
    <string name="empty_title">Title cannot be empty</string>
    <string name="note_details">Note details</string>
    <string name="note_title">Note title</string>
    <string name="note_text_long">Ryan Adams, whose new album Prisoner is out this Friday, was the latest guest on Marc Maron\’s podcast “WTF.” Adams discussed encountering the Rolling Stones early in his career (and talking penny loafers with drummer Charlie Watts), his struggles with addiction in the Easy Tiger era</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="lisa_volkova">Lisa Volkova</string>
    <string name="monday_5th_jan">Monday, 5th Jan</string>
    <string name="today_s_moods">Today’s moods</string>
    <string name="sad">Sad</string>
    <string name="at_10_20">at 10:20</string>
    <string name="mental_health">Mental Health</string>
    <string name="disgust">Disgust</string>
    <string name="pleasure">Pleasure</string>
    <string name="sadness">Sadness</string>
    <string name="happiness">Happy</string>
    <string name="anger">Stress</string>
    <string name="joy">Joy</string>
    <string name="body_health">Body Health</string>
    <string name="water">Water</string>
    <string name="_600_ml">600 ml</string>
    <string name="steps">Steps</string>
    <string name="sleep">Sleep</string>
    <string name="kcal">Kcal</string>
    <string name="add_new_mood">Add new mood</string>
    <string name="what_s_your_mood_now">What’s your mood now?</string>
    <string name="choose_emojis">Choose emojis that represent your mood</string>
    <string name="add_mood">Add mood</string>
    <string name="save_mood">Save mood</string>
    <string name="moods_of_the_day">Moods of the day</string>
    <string name="tests">Tests</string>
    <string name="stress_level_test">Stress level test</string>
    <string name="check_your_stress">Take a test to check your Stress level</string>
    <string name="anxiety_level_test">Anxiety level test</string>
    <string name="your_anxiety_level">Take a test to check your Anxiety level</string>
    <string name="how_do_you_feel">How do you feel now?</string>
    <string name="choose_an">Choose an emoji that represent your current mood best!</string>
    <string name="traumatised">Traumatised</string>
    <string name="stress_q_one">Which emoji describes your current mood best?</string>
    <string name="stress_title">Stress level test</string>
    <string name="next">Next</string>
    <string name="result_is">The test is finished! Your results are:</string>
    <string name="mood_t">Mood title</string>
    <string name="test_finished">\"The test is finished! Your results are: \"</string>
    <string name="finish">Finish</string>
    <string name="in_the_last">In the last month, how often have you:</string>
    <string name="test_completed">Test completed!</string>

    <string name="stress_high">Everyone faces challenges at some time or another and we can all benefit from tools that can help us work with them better. Stress and challenges are part of life and on the Be Mindful online course well show you a different way of handling them and discovering how to manage difficulties more skilfully. Find out what your stress score could be below, if you choose to take your next step in taking control with us.</string>
    <string name="stress_high_title">Your stress level is high</string>
    <string name="edit_health">Edit health</string>
    <string name="load_from_system">Load from system</string>
    <string name="liza_v">liza.volk999@gmail.com</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="health_param">Health parameters</string>
    <string name="set_app_pass">Reset password</string>
    <string name="account">ACCOUNT</string>
    <string name="preferences">PREFERENCES</string>
    <string name="_0">0%</string>
    <string name="of_stress">of stress</string>
    <string name="hours">hours</string>
    <string name="_7_5">7.5</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="no_sensor">No sensor detected on this device</string>
    <string name="_1h">1h</string>
    <string name="ua">ua</string>
    <string name="edit_your_personal_info">Edit your personal info</string>
    <string name="acc_data">Account data</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="not_saved">Not saved</string>
    <string name="set_new_health_goals">Set new health goals</string>
    <string name="water_goal">Water goal</string>
    <string name="steps_goal">Steps goal</string>
    <string name="sleep_hours_goal">Sleep hours goal</string>
    <string name="kcal_goal">Kcal goal</string>
    <string name="_4000ml"><![CDATA[< 4000 ml]]></string>
    <string name="_24h"><![CDATA[< 24 h]]></string>
    <string name="_4000_kcal"><![CDATA[< 4000 kcal]]></string>
    <string name="out_of_ml">з %d ml</string>
    <string name="out_of_h">з %d steps</string>
    <string name="set_new_password">Set new password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reauth_success">Re-Authentication success.</string>
    <string name="pass_ch_success">Password changed successfully.</string>
    <string name="reauth_fail">Re-Authentication failed.</string>
    <string name="en">en</string>
    <string name="add_another_mood">Add one more</string>
    <string name="add_note">Add note</string>
    <string name="of_anx">of anxiety</string>
    <string name="anx_high_title">Your anxiety level is high</string>
    <string name="result">Result</string>
    <string name="fav_notes">Favourite notes</string>


</resources>