<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_bottom_nav_home"/>

    <item
        android:id="@+id/moodFragment"
        android:title="@string/mood"
        android:icon="@drawable/ic_bottom_nav_mood"/>

    <item
        android:id="@+id/notesFragment"
        android:title="@string/notes"
        android:icon="@drawable/ic_bottom_nav_notes"/>
    <item
        android:id="@+id/healthFragment"
        android:title="@string/health"
        android:icon="@drawable/ic_bottom_nav_health"/>
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/ic_bottom_nav_settings"/>
</menu>