<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.settings.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:backgroundTint="@color/toolbar"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/settings"
            app:titleTextColor="@color/cornflower" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/edit_acc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:elevation="6dp"
        android:padding="10dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_edit_details"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="@id/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/light_purple" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/photo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/anon"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/circular"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout"
        />

    <View
        android:id="@+id/pref_rect"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/photo"
        android:background="@color/cultured"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferences"
        android:layout_marginStart="16dp"
        android:letterSpacing="0.2"
        android:textColor="@color/sett_space_title"
        app:layout_constraintTop_toTopOf="@id/pref_rect"
        app:layout_constraintBottom_toBottomOf="@id/pref_rect"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/lisa_volkova"
        android:textColor="@color/light_purple"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/photo"
        app:layout_constraintTop_toTopOf="@id/photo"/>

    <TextView
        android:id="@+id/email_sett"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/liza_v"
        android:textColor="@color/lavender_blue"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/language_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableStart="@drawable/ic_lang"
        android:drawablePadding="20dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/language"
        android:textColor="@color/sett_titles"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/pref_rect"
        app:layout_constraintStart_toStartOf="@id/photo"/>

    <TextView
        android:id="@+id/ua_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawablePadding="20dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/ua"
        android:textColor="@color/text_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/slash_title"
        app:layout_constraintTop_toBottomOf="@id/pref_rect"/>

    <TextView
        android:id="@+id/slash_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawablePadding="20dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/raleway_regular"
        android:text="/"
        android:textColor="@color/text_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/en_title"
        app:layout_constraintTop_toBottomOf="@id/pref_rect"/>

    <TextView
        android:id="@+id/en_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawablePadding="20dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/en"
        android:textColor="@color/text_grey"
        android:textSize="16sp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@id/lang_switch"
        app:layout_constraintTop_toBottomOf="@id/pref_rect"/>



    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/lang_switch"
        android:textOff="@string/ua"
        android:textOn="@string/en"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/language_title"
        app:layout_constraintBottom_toBottomOf="@id/language_title"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dark_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableStart="@drawable/ic_darkmode"
        android:drawablePadding="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/dark_mode"
        android:textColor="@color/sett_titles"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/language_title"
        app:layout_constraintStart_toStartOf="@id/photo"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dark_mode_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/dark_title"
        app:layout_constraintBottom_toBottomOf="@id/dark_title"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/param_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableStart="@drawable/ic_health_param"
        android:drawablePadding="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/health_param"
        android:textColor="@color/sett_titles"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/dark_title"
        app:layout_constraintStart_toStartOf="@id/photo"/>

    <View
        android:id="@+id/acc_rect"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/param_title"
        android:background="@color/cultured"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:layout_marginStart="16dp"
        android:letterSpacing="0.2"
        android:textColor="@color/sett_space_title"
        app:layout_constraintTop_toTopOf="@id/acc_rect"
        app:layout_constraintBottom_toBottomOf="@id/acc_rect"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pass_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableStart="@drawable/ic_app_pass"
        android:drawablePadding="20dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/set_app_pass"
        android:textColor="@color/sett_titles"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/acc_rect"
        app:layout_constraintStart_toStartOf="@id/photo"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/logout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:drawableStart="@drawable/ic_logout"
        android:drawablePadding="20dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/raleway_regular"
        android:text="@string/logout"
        android:textColor="@color/sett_titles"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/pass_title"
        app:layout_constraintStart_toStartOf="@id/photo"/>

</androidx.constraintlayout.widget.ConstraintLayout>