<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:backgroundTint="@color/light_purple"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/acc_data"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/set_new_health_goals"
        android:textColor="@color/prof_dial_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/water_edit_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toStartOf="@id/water_less"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="-30dp"
        app:layout_constraintStart_toStartOf="@id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/water_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_regular"
            android:hint="@string/water_goal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:inputType="text|textMultiLine|textCapSentences"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp"
            android:theme="@style/EditTextStyle" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/water_less"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/_4000ml"
        android:textColor="@color/prof_dial_title"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/water_edit_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/water_edit_layout"
        app:layout_constraintBottom_toBottomOf="@id/water_edit_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/steps_edit_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/water_edit_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="-30dp"
        app:layout_constraintStart_toStartOf="@id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/steps_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_regular"
            android:hint="@string/steps_goal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:inputType="text|textMultiLine|textCapSentences"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp"
            android:theme="@style/EditTextStyle" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sleep_edit_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/steps_edit_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="-30dp"
        app:layout_constraintEnd_toStartOf="@id/sleep_less"
        app:layout_constraintStart_toStartOf="@id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sleep_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_regular"
            android:hint="@string/sleep_hours_goal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:inputType="text|textMultiLine|textCapSentences"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp"
            android:theme="@style/EditTextStyle" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/sleep_less"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/_24h"
        android:textColor="@color/prof_dial_title"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/sleep_edit_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/sleep_edit_layout"
        app:layout_constraintBottom_toBottomOf="@id/sleep_edit_layout" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/kcal_edit_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/sleep_edit_layout"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@id/kcal_less"
        android:layout_marginBottom="-30dp"
        app:layout_constraintStart_toStartOf="@id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/kcal_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_regular"
            android:hint="@string/kcal_goal"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:inputType="text|textMultiLine|textCapSentences"
            android:text=""
            android:textColor="@color/black"
            android:textSize="18sp"
            android:theme="@style/EditTextStyle" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/kcal_less"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/_4000_kcal"
        android:textColor="@color/prof_dial_title"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/kcal_edit_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/kcal_edit_layout"
        app:layout_constraintBottom_toBottomOf="@id/kcal_edit_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>