<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/water_bg"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    app:cardBackgroundColor="@color/light_purple"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_color">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_half_smile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_s_your_mood_now"
            android:textSize="16sp"
            android:fontFamily="@font/raleway_bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="14dp"
            android:layout_marginStart="14dp"
            />
        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_emojis"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/raleway_regular"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/main_title"
            app:layout_constraintStart_toStartOf="@id/main_title"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/add_mood_btn"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:text="@string/add_mood"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:fontFamily="@font/raleway_bold"
            android:textColor="@color/light_purple"
            android:background="@drawable/notes_search_bg"
            app:layout_constraintTop_toBottomOf="@id/subtitle"
            app:layout_constraintStart_toStartOf="@id/subtitle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>